Version 2.5 - 19 May, by Per Øyvind Karlsen <proyvind@moondrake.org>

- drop gnome-themes-standard
- add /lib/module-init-tools/ldetect-lst-modules.alias
- replace 'tset' with 'tty'
- add xfs_freeze & xfs_io
- update for compatibility with latest grub2
- sync with kernel-3.14

Version 2.4 - 10 April, by Per Øyvind Karlsen <proyvind@moondrake.org>

- drop mount.nfs from stage1 as busybox has nfs mount support
- sync installer grub2 theme with system grub2 theme
- sync with kernel-3.12
- include "sdhci-acpi" for eMMC (mga#11812)

Version 2.3 - 11 January, by Per Øyvind Karlsen <proyvind@moondrake.org>

- include some more of jfs utils
- ship uClibc build of hdparm to be able to repair damaged sectors

Version 2.2 - 20 December, by Per Øyvind Karlsen <proyvind@moondrake.org>

- adapt to latest mdadm
- fix boot from harddisk option properly
- revert inclusion of network name udev rule that got accidentally merged from
  mageia earlier
- don't ship packdrake due to it's perl dependency and lack of relevance since
  we switched from using hdlist to synthesis by default ages ago
- fix paths to terminal background and fonts in grub2 theme
- replace dd_rescue with ddrescue

Version 2.1 - 28 October, by Per Øyvind Karlsen <proyvind@moondrake.org>

- drop termcap, terminfos cuts it :)
- many btrfs tools no longer exist
- adapt to latest mdadm
- sync with kernel-3.12
- sync with kernel-3.11
- partial sync with kernel-3.11 regarding USB: include
  ehci-tegra, ohci-pci ohci-platform fusbh200-hcd & usb_common
  (might fix mga#11377)
- add xterm-256color to terminfos
- add utils for harddisk recovery
- prelink files
- include db*_dump, db*_load & db*_recover also in ucDrakx environment
- include network interface name udev rule (mga#10947)
- sync with kernel-3.10
- sync with kernel-3.9
- add 'dd_rescue' to uCdrakx
- ensure /dev is bind mounted before re-installing bootloader (mga#10107)

Version 2.0 - 24 April 2013, by Per Øyvind Karlsen

- move firmware into separate initrd