@@ -1,3 +1,5 @@
+- include configuration, init script etc. for udhcpd
+
 Version 2.5 - 19 May, by Per Øyvind Karlsen <proyvind@moondrake.org>
 
 - drop gnome-themes-standard
